--- a/public/map/css/svg-turkiye-haritasi.css
+++ b/public/map/css/svg-turkiye-haritasi.css
@@ -12,15 +12,15 @@
   position: absolute;
   z-index: 2;
 }
-.imge{
+.imge {
   position: absolute;
   z-index: 2;
 }
-.imge img{
+.imge img {
   display: inline-block;
 }
 .il-isimleri div {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   display: inline-block;
   background: #fff;
   color: black;
@@ -29,17 +29,33 @@
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
+  box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.8);
 }
-#svg-turkiye-haritasi{
+#svg-turkiye-haritasi {
   cursor: pointer;
   fill: #474747;
+  margin-top: 70px;
 }
-.gdg path{
+.gdg {
   fill: #c70020;
 }
-.gdg path:hover{
+.gdg :hover {
   fill: #c70021ab;
 }
 #guney-kibris {
   pointer-events: none;
+}
+h1 {
+  text-align: center;
+  font-size: 3em;
+  color: #474747;
+  margin-bottom: 35px;
+}
+h4 {
+  text-align: center;
+  color: #474747;
+}
+h4 a {
+  text-decoration: none;
+  color: blue;
 }
